Trabajo en Contact

--- a/CV-html/index.html
+++ b/CV-html/index.html
@@ -21,9 +21,13 @@
                 <h3>CONTACT</h3>
                 <hr>
                 <nav>
-                    <p id="address">Juramento 4140, C.A.B.A., Argentina</p>
-                    <p id="email">diegoscarpati13@gmail.com</p>
-                    <p id="number">+5491124552154</p>
+                    <p id="address">Juramento 3740, C.A.B.A., Argentina</p>
+                    <div id="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.5323418343114!2d-58.4643610849776!3d-34.56539438046935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d5e6273f73%3A0x3a983723199765ce!2sAv.%20Juramento%203740%2C%20C1428DNZ%20CABA!5e0!3m2!1ses!2sar!4v1636652671410!5m2!1ses!2sar" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <button id="close">x</button>
+                    </div>
+                    <p><a href="mailto:diegoscarpati13gmail.com" id="email">diegoscarpati13@gmail.com</a></p>
+                    <p><a href="https://wa.me/+5491124552154" target="_blank" id="number">+54 911 2455-2154</a></p>
                     <p><a href="https://www.linkedin.com/in/diego-scarpati-458966b6/" target="_blank" id="linkedin">/diego-scarpati-458966b6/</a></p>
                     <p><a href="https://github.com/dscar13" target="_blank" id="github">/dscar13</a></p>
                 </nav>
