PDF cursos y arreglo Main

--- a/CV-html/index.html
+++ b/CV-html/index.html
@@ -12,7 +12,7 @@
         <div id="profilePic"><img src="img/foto-cv.jpeg" id="pic"><img src="img/pixel-glasses.png" id="pixel"></div>
         <div id="title">
             <h1>DIEGO SCARPATI</h1>
-            <h2>IT STUDENT, CRYPTO ENTHUSIAST</h2>
+            <h2>IT STUDENT, DEVELOPER</h2>
         </div>
     </header>
     <main>
@@ -41,25 +41,55 @@
                 <h3>EDUCATION</h3>
                 <hr>
                 <p><b>Educacion IT</b></p>
-                <p>Python Web Programming, Ongoing</p>
+                <div id="EdIT">
+                    <p>Python Web Programming, Ongoing</p>
+                    <p id="EdIT-Program"><a href="https://www.educacionit.com/carrera-python" target="_blank">Click to see its study program.</a></p>
+                </div>
                 <p><b>University of Buenos Aires</b></p>
                 <p>Public Accounting, 2014 - Today</p>
                 <p><b>Udemy</b></p>
-                <p>Python Bootcamp, 2021</p>
-                <p>BI Analyst, 2020</p>
+                <p id="Agile">Agile Project Management, 2021</p>
+                    <div id="Agile-div">
+                        <embed src="img/Agile.pdf" type="application/pdf" id="PyBoot-pdf">
+                        <button id="Agile-btn">x</button>
+                    </div>        
+                <p id="PyBoot">Python Bootcamp, 2021</p>
+                    <div id="PyBoot-div">
+                        <embed src="img/Python-Bootcamp.pdf" type="application/pdf" id="PyBoot-pdf">
+                        <button id="PyBoot-btn">x</button>
+                    </div>        
+                <p id="BI">BI Analyst, 2020</p>
+                    <div id="BI-div">
+                        <iframe src="img/BI-Analyst.pdf" frameborder="0" id="BI-pdf"></iframe>
+                        <button id="BI-btn">x</button>
+                    </div>
             </div>
         </section>
         <section id="life">
             <div id="skills">
-                <h3>SKILLS</h3>
-                <hr>
-                <ul>
-                    <li>Exceptional both learning and teaching skills.</li>
-                    <li>Detail-oriented.</li>
-                    <li>Successful working in a team environment, as well as independently.</li>
-                    <li>The ability to work under pressure and multi-task.</li>
-                    <li>The ability to follow instructions and deliver quality results.</li>
-                </ul>
+                <div id="soft">
+                    <h3>SOFT SKILLS</h3>
+                    <hr>
+                    <ul>
+                        <li>Exceptional both learning and teaching skills.</li>
+                        <li>Results and detail-oriented.</li>
+                        <li>Successful working in a team environment, as well as independently.</li>
+                        <li>The ability to work under pressure and multi-task while delivering quality results</li>
+                    </ul>
+                </div>
+                <div id="hard">
+                    <h3>HARD SKILLS</h3>
+                    <hr>
+                    <ul>
+                        <li>Programming languages:</li>
+                            <ul>
+                                <li>Front: HTML, CSS, JavaScript.</li>
+                                <li>Back: Python, SQL.</li>
+                                <li>Colaborative: GIT.</li>
+                            </ul>
+                        <li>Agile methodologies.</li>
+                    </ul>
+                </div>
             </div>
             <div id="work">
                 <h3>WORK EXPERIENCE</h3>
@@ -69,25 +99,23 @@
                     <p>DEC 2017 - APR 2021</p>
                     <ul>
                         <li>Working alongside a large team of auditors.</li>
-                        <li>In charge of building the Financial Statements, according to the corresponding Accounting Standards.</li>
-                        <li>Scheduling meetings with client's staff following up with the planned timeline.</li>
+                        <li>In charge of building the Financial Statements, according to IFRS and ARG-GAAP.</li>
+                        <li>Scheduling meetings with client's staff following up with the planned timeline (Agile).</li>
                     </ul>
                 </div>
                 <div class="experience">
                     <p><b>Blue Guardian S.A.</b> - Administrative</p>
                     <p>JUN 2017 - NOV 2017</p>
                     <ul>
-                        <li>Data entry in the accounting software.</li>
-                        <li>Answering to clients.</li>
+                        <li>Data entry and data management using ERP software (TANGO).</li>
+                    </ul>
                 </div>
                 <div class="experience">
-                    </ul>
-                    <p><b>St. Regis at Deer Valley</b> - Buttler</p>
+                    <p><b>St. Regis at Deer Valley (USA)</b> - Buttler</p>
                     <p>DEC 2016 - MAR 2017</p>
                     <ul>
                         <li>Receiving the Hotel's Premium guests.</li>
-                        <li>Showing around the Hotel's amenities and activities.</li>
-                        <li>Scheduling guests activities.</li>
+                        <li>Scheduling guests activities and checking up on them during their stay.</li>
                     </ul>
                 </div>
             </div>
