Modificacion div certificados

--- a/CV-html/index.html
+++ b/CV-html/index.html
@@ -60,7 +60,7 @@
                     </div>        
                 <p id="BI">BI Analyst, 2020</p>
                     <div id="BI-div">
-                        <iframe src="img/BI-Analyst.pdf" frameborder="0" id="BI-pdf"></iframe>
+                        <embed src="img/BI-Analyst.pdf" type="application/pdf" id="BI-pdf">
                         <button id="BI-btn">x</button>
                     </div>
             </div>
@@ -115,7 +115,7 @@
                     <p>DEC 2016 - MAR 2017</p>
                     <ul>
                         <li>Receiving the Hotel's Premium guests.</li>
-                        <li>Scheduling guests activities and checking up on them during their stay.</li>
+                        <li>Scheduling guests' activities and checking up on them during their stay.</li>
                     </ul>
                 </div>
             </div>
