Arreglo git + JS avanzado

--- a/CV-html/index.html
+++ b/CV-html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="profilePic"><img src="img/foto-cv.jpeg" id="pic"><img src="img/pixel-glasses.png" id="pixel"></div>
+        <div id="profilePic"><img src="img/foto-cv.jpeg" id="pic"> <img src="img/pixel-glasses.png" id="pixel"> </div>
         <div id="title">
             <h1>DIEGO SCARPATI</h1>
             <h2>IT STUDENT, DEVELOPER</h2>
@@ -29,7 +29,8 @@
                     <p><a href="mailto:diegoscarpati13gmail.com" id="email">diegoscarpati13@gmail.com</a></p>
                     <p><a href="https://wa.me/+5491124552154" target="_blank" id="number">+54 911 2455-2154</a></p>
                     <p><a href="https://www.linkedin.com/in/diego-scarpati-458966b6/" target="_blank" id="linkedin">/diego-scarpati-458966b6/</a></p>
-                    <p><a href="https://github.com/dscar13" target="_blank" id="github">/dscar13</a></p>
+                    <p><a href="https://github.com/dscar13/CV" target="_blank" id="github">/dscar13/CV</a></p>
+                    <!-- <p><a href="https://diegoscarpati.com" target="_blank" id="web">diegoscarpati.com</a></p> -->
                 </nav>
             </div>
             <div id="profile">
@@ -84,7 +85,7 @@
                         <li>Programming languages:</li>
                             <ul>
                                 <li>Front: HTML, CSS, JavaScript.</li>
-                                <li>Back: Python, SQL.</li>
+                                <li>Back: Python, Django, SQL.</li>
                                 <li>Colaborative: GIT.</li>
                             </ul>
                         <li>Agile methodologies.</li>
