PDF Educacion IT terminado

--- a/CV-html/index.html
+++ b/CV-html/index.html
@@ -43,7 +43,7 @@
                 <hr>
                 <p><b>Educacion IT</b></p>
                 <div id="EdIT">
-                    <p>Python Web Programming 2021</p>
+                    <p>Python Web Programming, 2021</p>
                     <p id="EdIT-Program"><a href="https://www.educacionit.com/carrera-python" target="_blank">Click to see its study program.</a></p>
                 </div>
                 <p><b>University of Buenos Aires</b></p>
