--- a/CV-html/index.html
+++ b/CV-html/index.html
@@ -21,16 +21,16 @@
                 <h3>CONTACT</h3>
                 <hr>
                 <nav>
-                    <p id="address">Juramento 3740, C.A.B.A., Argentina</p>
+                    <p id="address" class="contact">Juramento 3740, C.A.B.A., Argentina</p>
                     <div id="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.5323418343114!2d-58.4643610849776!3d-34.56539438046935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d5e6273f73%3A0x3a983723199765ce!2sAv.%20Juramento%203740%2C%20C1428DNZ%20CABA!5e0!3m2!1ses!2sar!4v1636652671410!5m2!1ses!2sar" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         <button id="close">x</button>
                     </div>
-                    <p><a href="mailto:diegoscarpati13gmail.com" id="email">diegoscarpati13@gmail.com</a></p>
-                    <p><a href="https://wa.me/+5491124552154" target="_blank" id="number">+54 911 2455-2154</a></p>
-                    <p><a href="https://www.linkedin.com/in/diego-scarpati-458966b6/" target="_blank" id="linkedin">/diego-scarpati-458966b6/</a></p>
-                    <p><a href="https://github.com/dscar13/CV" target="_blank" id="github">/dscar13/CV</a></p>
-                    <!-- <p><a href="https://diegoscarpati.com" target="_blank" id="web">diegoscarpati.com</a></p> -->
+                    <p><a href="mailto:diegoscarpati13gmail.com" id="email" class="contact" alt="Location">diegoscarpati13@gmail.com</a></p>
+                    <p><a href="https://wa.me/+5491124552154" target="_blank" id="number" class="contact" alt="Whatsapp">+54 911 2455-2154</a></p>
+                    <p><a href="https://www.linkedin.com/in/diego-scarpati-458966b6/" target="_blank" id="linkedin" class="contact" alt="LinkedIn">/diego-scarpati-458966b6/</a></p>
+                    <p><a href="https://github.com/dscar13/CV" target="_blank" id="github" class="contact" alt="GitHub">/dscar13/CV</a></p>
+                    <!-- <p><a href="https://diegoscarpati.com" target="_blank" id="web" class="contact">diegoscarpati.com</a></p> -->
                 </nav>
             </div>
             <div id="profile">
@@ -50,19 +50,19 @@
                 <p>Public Accounting, 2014 - Today</p>
                 <p><b>Udemy</b></p>
                 <p id="Agile">Agile Project Management, 2021</p>
-                    <div id="Agile-div">
-                        <embed src="img/Agile.pdf" type="application/pdf" id="PyBoot-pdf">
-                        <button id="Agile-btn">x</button>
+                    <div id="Agile-div" class="cert-div">
+                        <embed src="img/Agile.pdf" type="application/pdf" id="PyBoot-pdf" class="pdf">
+                        <button id="Agile-btn" class="btn">x</button>
                     </div>        
                 <p id="PyBoot">Python Bootcamp, 2021</p>
-                    <div id="PyBoot-div">
-                        <embed src="img/Python-Bootcamp.pdf" type="application/pdf" id="PyBoot-pdf">
-                        <button id="PyBoot-btn">x</button>
+                    <div id="PyBoot-div" class="cert-div">
+                        <embed src="img/Python-Bootcamp.pdf" type="application/pdf" id="PyBoot-pdf" class="pdf">
+                        <button id="PyBoot-btn" class="btn">x</button>
                     </div>        
                 <p id="BI">BI Analyst, 2020</p>
-                    <div id="BI-div">
-                        <embed src="img/BI-Analyst.pdf" type="application/pdf" id="BI-pdf">
-                        <button id="BI-btn">x</button>
+                    <div id="BI-div" class="cert-div">
+                        <embed src="img/BI-Analyst.pdf" type="application/pdf" id="BI-pdf" class="pdf">
+                        <button id="BI-btn" class="btn">x</button>
                     </div>
             </div>
         </section>
